# lacrei-project

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
api/: models.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_alter_appointment_date_and_more.py
lacrei_saude/: asgi.py  settings.py  urls.py  wsgi.py
